--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
   }
 
   .background{
-    /* background-image: url('/assets/seamless-white-interlaced-rounded-arc-patterned-background_53876-97975.jpg'); */
+    background-image: url('/images/seamless-white-interlaced-rounded-arc-patterned-background_53876-97975.jpg');
     background-size: cover;
     background-repeat: no-repeat;
   }
